--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img-1.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -114,7 +114,7 @@
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img-1.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -125,7 +125,7 @@
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img-1.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -136,7 +136,7 @@
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img-1.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -147,7 +147,7 @@
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img-1.png" alt="img">
           </div>
         </div>
       </div>
@@ -160,7 +160,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="./img/img-2.png" alt="img">
+          <img src="./img-2.png" alt="img">
         </div>
       </div>
       <div class="col-right">
